<?xml version="1.0" encoding="UTF-8"?><project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>dk.sdu.cbse</groupId>
  <artifactId>AsteroidsFX</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>AsteroidsFX</name>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>25.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>25.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>25.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
        <version>6.1.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <fork>true</fork>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>copy-javafx</id>
            <phase>validate</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-graphics</artifactId>
                  <version>25.0.1</version>
                  <type>jar</type>
                  <classifier>win</classifier>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-controls</artifactId>
                  <version>25.0.1</version>
                  <type>jar</type>
                  <classifier>win</classifier>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.openjfx</groupId>
                  <artifactId>javafx-base</artifactId>
                  <version>25.0.1</version>
                  <type>jar</type>
                  <classifier>win</classifier>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-context</artifactId>
                  <version>6.1.3</version>
                  <type>jar</type>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-beans</artifactId>
                  <version>6.1.3</version>
                  <type>jar</type>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-core</artifactId>
                  <version>6.1.3</version>
                  <type>jar</type>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-jcl</artifactId>
                  <version>6.1.3</version>
                  <type>jar</type>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-aop</artifactId>
                  <version>6.1.3</version>
                  <type>jar</type>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
                <artifactItem>
                  <groupId>org.springframework</groupId>
                  <artifactId>spring-expression</artifactId>
                  <version>6.1.3</version>
                  <type>jar</type>
                  <outputDirectory>${project.basedir}/mods-mvn</outputDirectory>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <executable>java</executable>
          <workingDirectory>.</workingDirectory>
          <arguments>
            <argument>--module-path=mods-mvn</argument>
            <argument>--class-path=libs/*</argument>
            <argument>--module=Core/dk.sdu.cbse.core.Main</argument>
            <argument>--add-modules</argument>
            <argument>javafx.graphics,javafx.controls</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>parent-project</id>
      <activation>
        <file>
          <missing>src</missing>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-clean-plugin</artifactId>
            <version>3.2.0</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>mods-mvn</directory>
                </fileset>
                <fileset>
                  <directory>libs</directory>
                </fileset>
              </filesets>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>child-project</id>
      <activation>
        <file>
          <exists>src</exists>
        </file>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.0.2</version>
            <executions>
              <execution>
                <id>copy-installed</id>
                <phase>install</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>${project.groupId}</groupId>
                      <artifactId>${project.artifactId}</artifactId>
                      <version>${project.version}</version>
                      <type>jar</type>
                    </artifactItem>
                  </artifactItems>
                  <outputDirectory>../mods-mvn</outputDirectory>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <modules>

    <module>Common</module>
    <module>CommonBullet</module>
    <module>CommonAsteroid</module>
    <module>CommonPlayer</module>
    <module>CommonEnemy</module>

    <module>Player</module>
    <module>Asteroid</module>
    <module>Bullet</module>
    <module>Enemy</module>

    <module>Collision</module>

    <module>Core</module>


  </modules>
</project>
